--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
+    <meta property="og:title" content="Видеосервис START" />
+    <meta property="og:description" content="Куча фильмов и сериалов всего за 299 рублей в месяц. Никаких дополнительных платежей, всё уже включено. И работает по всему миру" />
+    <meta property="vk:image" content="https://start.ru/static/images/sharing.jpg" />
+    <meta property="og:image" content="https://start.ru/static/images/sharing.jpg" />
+    <link rel="image_src" href="https://start.ru/static/images/sharing.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
