--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <meta property="vk:image" content="%PUBLIC_URL%/src/images/panda.png" />
-    <meta property="og:image" content="%PUBLIC_URL%/src/images/panda.png" />
-    <link rel="image_src" href="%PUBLIC_URL%/src/images/panda.png" />
+    <meta property="vk:image" content="%PUBLIC_URL%/panda.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/panda.png" />
+    <link rel="image_src" href="%PUBLIC_URL%/panda.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
