--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Прайс на размещение" />
     <meta property="vk:image" content="%PUBLIC_URL%/panda.png" />
     <meta property="og:image" content="%PUBLIC_URL%/panda.png" />
     <link rel="image_src" href="%PUBLIC_URL%/panda.png" />
